<resources>
	<string name="app_name" translatable="false">Schedule</string>

	<!-- navigation drawer -->
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="navigation_header">@string/app_name</string>
	<string name="navigation_subheader">Developed by Wannes G.</string>

	<!-- registration -->
	<string name="login_desiderius">Log in with Desiderius</string>
	<string name="fetching_data">Fetching data…</string>
	<string name="parsing_data">Parsing calendar events…</string>
	<string name="code_help">I don\'t know what my security code is!</string>
	<string name="enter_security_code">Enter a security code</string>
	<string name="hint_studentmail">Enter your student mail</string>
	<string name="hint_password">Enter your password</string>
	<string name="fetch_code">Fetch my security code</string>

	<!-- menu items -->
	<string name="menu_calendar">Calendar</string>
	<string name="menu_list">List of events</string>
	<string name="menu_subheader">System</string>
	<string name="menu_settings">Configuration</string>
	<string name="menu_calendars">Calendars</string>

	<!-- Calendar list image letters -->
	<string name="practical_letter">P</string>
	<string name="theoretical_letter">T</string>
	<string name="meeting_letter">M</string>
	<string name="other_letter">O</string>

	<!-- Settings -->
	<string name="reset_all">Reset all data</string>

	<!-- Share -->
	<string name="share_google_calendar">Export to Google Calendar</string>

	<string name="choose_calendar">Choose calendar</string>
	<string name="share_nfc">Export over NFC</string>
	<string name="export_complete">Export complete!</string>
	<string name="delete_calendar">Delete calendars</string>
	<string name="calendars_deleted">Calendars deleted</string>

	<string name="calendar_processed">Calendars refreshed!</string>
	<string name="token_error">Invalid token or connection error.</string>
	<string name="rename_calendar">Rename calendar</string>
	<string name="calendar_saved">Calendar saved!</string>

	<string name="nfc_unavailable">NFC not available!</string>
	<string name="nfc_disabled">NFC is not enabled!</string>
	<string name="nfc_sending">Sending over NFC…</string>
	<string name="pick_colour">Pick a colour</string>
	<string name="update_complete">Update complete!</string>
</resources>
