<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="be.dealloc.schedule.activities.fragments.RegistrationFragment">

	<Button
		android:text="@string/enter_security_code"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_centerHorizontal="true"
		android:id="@+id/registration_btnEnterCode"
		android:layout_width="240dp" />

	<Button
		android:text="@string/login_desiderius"
		android:layout_width="240dp"
		android:layout_height="wrap_content"
		android:layout_above="@+id/registration_btnEnterCode"
		android:layout_centerHorizontal="true"
		android:id="@+id/registration_btnDesiderius" />

	<TextView
		android:text="@string/code_help"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:id="@+id/registration_lblHelp"
		android:textColor="#0800ff"
		android:textStyle="normal|bold" />

</RelativeLayout>
