<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="be.dealloc.schedule.activities.DesideriusActivity">

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textEmailAddress"
		android:ems="10"
		android:layout_above="@+id/desiderius_txtPassword"
		android:layout_centerHorizontal="true"
		android:id="@+id/desiderius_txtEmail"
		android:hint="@string/hint_studentmail" />

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:ems="10"
		android:layout_centerVertical="true"
		android:layout_centerHorizontal="true"
		android:id="@+id/desiderius_txtPassword"
		android:hint="@string/hint_password" />

	<Button
		android:text="@string/fetch_code"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/desiderius_txtPassword"
		android:layout_centerHorizontal="true"
		android:id="@+id/desiderius_btnLogin" />
</RelativeLayout>