<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_registration"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="be.dealloc.schedule.activities.RegistrationActivity">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/registration_main">
		<Button
			android:text="@string/enter_security_code"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:id="@+id/registration_btnEnterCode"
			android:layout_width="240dp" />

		<TextView
			android:text="@string/code_help"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:id="@+id/registration_lblHelp"
			android:textColor="#0800ff"
			android:textStyle="normal|bold" />

	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/register_loading">

		<ProgressBar
			style="?android:attr/progressBarStyleLarge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:id="@+id/register_prgLoading" />

		<TextView
			android:text="@string/fetching_data"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/register_prgLoading"
			android:layout_centerHorizontal="true"
			android:id="@+id/register_txtLoadingStatus" />
	</RelativeLayout>
</ViewFlipper>
